// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadRoutes > 0 routes 1`] = `[]`;

exports[`loadRoutes > 1 route no modules 1`] = `
[
  {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`loadRoutes > 1 route with _index.tsx module 1`] = `
[
  {
    "elements": {
      "index": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_index.tsx",
        "id": "src/_index.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`loadRoutes > 1 route with _layout.tsx module 1`] = `
[
  {
    "elements": {
      "layout": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_layout.tsx",
        "id": "src/_layout.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`loadRoutes > 1 route with _notFound.tsx module 1`] = `
[
  {
    "elements": {
      "notFound": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_notFound.tsx",
        "id": "src/_notFound.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;
